--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -117,69 +117,13 @@
     </section>
   </section>
 
-<!-- <p>params: <%= params %></p>
-<p>session: <%= session %></p> -->
-
 <%= "<p>errors: #{flash[:errors]} </p>".html_safe if flash[:errors] %>
 <%= "<p>notice: #{flash[:notice]} </p>".html_safe if flash[:notice] %>
 
-<%#= render "layouts/navigation_bar_signed_in" if signed_in? %>
-<%#= render "layouts/navigation_bar_not_signed_in" if !signed_in? %>
-
-<script>
-
-$(document).ready(function() {
-
-  window.modal = {
-    show: function(){
-      $("body").addClass("has-active-modal");
-    },
-    hide: function(){
-      $("body").removeClass("has-active-modal");
-    }
-  };
-
-  $("body").on("click", ".show-modal", function(event){
-    event.preventDefault();
-    window.modal.show();
-  });
-
-  $(".modal").on("click", function(event){
-
-    $target = $(event.target);
-    if($target.is(".modal") || $target.is(".modal-close-button")){
-      event.preventDefault();
-      window.modal.hide();
-    }
-  });
-
-  $(".favorite-form").addClass("hidden");
-
-  $(".current-weather-summary").on("click","a.favorite", function(event) {
-    event.preventDefault();
-    var that = this;
-    var urlStub = "<%= modify_favorite_zip_code_links_url %>?zip_code_id=";
-    var zipCodeId = $(this).attr("data-zip-code-id");
-    var completeUrl = urlStub + zipCodeId;
-
-    if ($(this).hasClass("true")) {
-      $.ajax({
-        url: completeUrl,
-        type: "DELETE",
-        success: changeStarToUnfavorited(that)
-      });
-    } else {
-      $.ajax({
-        url: completeUrl,
-        type: "POST",
-        success: changeStarToFavorited(that)
-      });
-    };
-  });
-
-});
-
-</script>
+<%= javascript_tag do %>
+  // favorite star variables for dropdown, injected via ERB
+  window.modifyFavoriteCityLinkUrlStubForDropdown = "<%= modify_favorite_zip_code_links_url %>?zip_code_id="
+<% end %>
 
 </body>
 </html>
