Moves new weather report+photo AJAX uploading script to separate file

--- a/app/views/weather_reports/new_with_photo.html.erb
+++ b/app/views/weather_reports/new_with_photo.html.erb
@@ -1,4 +1,4 @@
-<!-- /app/views/photos/new.html.erb -->
+<!-- /app/views/weather_reports/new_with_photo.html.erb -->
 
 <h2 class="page-title">New Post</h2>
 
