Fixes guest login button so guest login script supports multiple forms on one page

--- a/app/views/nav_bar_dropdowns/_user_menu.html.erb
+++ b/app/views/nav_bar_dropdowns/_user_menu.html.erb
@@ -27,7 +27,7 @@
 
 <% else %>
 
-  <%= render "sessions/new", user: current_user %>
+  <%= render "sessions/new", user: current_user, placement: :nav_bar %>
 
 <% end %>
 
