--- a/app/views/zip_codes/index.html.erb
+++ b/app/views/zip_codes/index.html.erb
@@ -37,7 +37,7 @@
   <section class="signin">
     <h3 class="section-title">Sign Up or Sign In</h3>
 
-    <%= render "sessions/new", user: nil %>
+    <%= render "sessions/new", user: nil, placement: :front_page %>
   </section>
 </section>
 
