--- a/app/views/zip_codes/show.html.erb
+++ b/app/views/zip_codes/show.html.erb
@@ -107,23 +107,25 @@
   window.modifyFavoriteCityLinkUrl = "<%= modify_favorite_zip_code_links_url + "?zip_code_id=#{@zip_code.id}" %>"
 <% end %>
 
-<script src="<%= asset_path "zip_codes/conditions_chart.js" %>" type="text/javascript"></script>
+
+<!-- <script src="<%= asset_path "zip_codes/conditions_chart.js" %>" type="text/javascript"></script>
 <script src="<%= asset_path "zip_codes/carrousel.js" %>" type="text/javascript"></script>
 <script src="<%= asset_path "zip_codes/modify_favorite_zip_code_link.js" %>" type="text/javascript"></script>
+ -->
 
 <script>
-$(document).ready(function(){
-  $(".new-report-dumb-link").addClass("hidden");
-  swapPercentagesWithChart();
-  Carrousel.init();
+  $(document).ready(function(){
+    $(".new-report-dumb-link").addClass("hidden");
 
-  $(".favorite-form").addClass("hidden");
-  $("h2.page-title").on("click","a.favorite", function(event) {
-    event.preventDefault();
-    toggleFavoriteAJAXRequest(this);
+    conditionsChart.swapPercentagesWithChart();
+
+    Carrousel();
+    carrouselActions.init();
+
+    $(".favorite-form").addClass("hidden");
+    $("h2.page-title").on("click","a.favorite", function(event) {
+      event.preventDefault();
+      toggleFavoriteAJAXRequest(this);
+    });
   });
-});
-
-
-
 </script>
