Disables asset_path erb interpolation in zip code show page

--- a/app/views/zip_codes/show.html.erb
+++ b/app/views/zip_codes/show.html.erb
@@ -108,9 +108,9 @@
 <% end %>
 
 
-<!-- <script src="<%= asset_path "zip_codes/conditions_chart.js" %>" type="text/javascript"></script>
-<script src="<%= asset_path "zip_codes/carrousel.js" %>" type="text/javascript"></script>
-<script src="<%= asset_path "zip_codes/modify_favorite_zip_code_link.js" %>" type="text/javascript"></script>
+<!-- <script src="<%#= asset_path "zip_codes/conditions_chart.js" %>" type="text/javascript"></script>
+<script src="<%#= asset_path "zip_codes/carrousel.js" %>" type="text/javascript"></script>
+<script src="<%#= asset_path "zip_codes/modify_favorite_zip_code_link.js" %>" type="text/javascript"></script>
  -->
 
 <script>
