Adds MapBox map to zip code show page with markers for recent reports

--- a/app/assets/stylesheets/zip_codes/show.css
+++ b/app/assets/stylesheets/zip_codes/show.css
@@ -57,3 +57,11 @@ canvas#conditions-chart{
 .recent-reports td.temperature-value {
   text-align:right;
 }
+
+
+/*----------------- MAP -----------------------*/
+
+#map {
+  margin-top:25px;
+  height:400px;
+}
