Adjust naming of conditionschart.js functions to control when they're called

--- a/app/views/zip_codes/show.html.erb
+++ b/app/views/zip_codes/show.html.erb
@@ -154,6 +154,7 @@
   $(document).ready(function(){
     $(".new-report-dumb-link").addClass("hidden");
 
+    startConditionsChart();
     conditionsChart.swapPercentagesWithChart();
 
     Carrousel();
