Changes weather map button scroll speed to slow

--- a/app/views/zip_codes/show.html.erb
+++ b/app/views/zip_codes/show.html.erb
@@ -164,7 +164,7 @@
   $(document).ready(function(){
     $("#weather-map-button").click(function (event) {
       event.preventDefault();
-      $("body").animate({ scrollTop: 947 }, "fast")
+      $("body").animate({ scrollTop: 947 }, "slow")
     });
 
     $(".new-report-dumb-link").addClass("hidden");
